--- a/src/locales/ar/pricing-rule.json
+++ b/src/locales/ar/pricing-rule.json
@@ -31,5 +31,97 @@
     "updateSuccess": "تم تحديث القاعدة بنجاح",
     "deleteSuccess": "تم حذف القاعدة بنجاح",
     "confirmDelete": "هل أنت متأكد أنك تريد حذف هذه القاعدة؟"
+  },
+  "loading": "جارٍ التحميل...",
+  "loadingDescription": "جارٍ تحميل معلومات قواعد التسعير",
+  "list": {
+    "title": "قواعد التسعير",
+    "description": "إدارة قواعد التسعير والبنود التابعة لها",
+    "add": "إضافة قاعدة",
+    "empty": "لا توجد قواعد تسعير"
+  },
+  "salesmen": {
+    "title": "مندوبو المبيعات",
+    "addSuccess": "تمت إضافة المندوب",
+    "addSuccessMessage": "تمت إضافة المندوب بنجاح",
+    "addError": "فشل الإضافة",
+    "addErrorMessage": "تعذر إضافة المندوب",
+    "deleteSuccess": "تم حذف المندوب",
+    "deleteSuccessMessage": "تم حذف المندوب بنجاح",
+    "deleteError": "فشل الحذف",
+    "deleteErrorMessage": "تعذر حذف المندوب"
+  },
+  "header": {
+    "ruleType": "نوع القاعدة",
+    "ruleCode": "رمز القاعدة",
+    "ruleName": "اسم القاعدة",
+    "validFrom": "ساري من",
+    "validTo": "ساري حتى",
+    "customer": "العميل",
+    "erpCustomerCode": "رمز العميل في ERP",
+    "branchCode": "رمز الفرع",
+    "currencyCode": "العملة",
+    "priceIncludesVat": "يشمل ضريبة القيمة المضافة",
+    "isActive": "نشط",
+    "ruleTypePlaceholder": "اختر نوع القاعدة",
+    "validToMustBeAfterValidFrom": "يجب أن يكون تاريخ الانتهاء بعد تاريخ البدء",
+    "ruleCodePlaceholder": "أدخل رمز القاعدة",
+    "ruleNamePlaceholder": "أدخل اسم القاعدة",
+    "customerPlaceholder": "أدخل العميل",
+    "selectCustomer": "اختر العميل",
+    "branchCodePlaceholder": "أدخل رمز الفرع",
+    "selectCurrency": "اختر العملة"
+  },
+  "ruleType": {
+    "demand": "طلب",
+    "quotation": "عرض سعر",
+    "order": "طلب شراء",
+    "unknown": "غير معروف"
+  },
+  "lines": {
+    "title": "البنود",
+    "add": "إضافة بند",
+    "empty": "لا توجد بنود",
+    "stokCode": "رمز المخزون",
+    "minQuantity": "أقل كمية",
+    "maxQuantity": "أقصى كمية",
+    "fixedUnitPrice": "سعر الوحدة الثابت",
+    "discount1": "خصم 1",
+    "discount2": "خصم 2",
+    "discount3": "خصم 3",
+    "discount1Rate": "نسبة خصم 1",
+    "discount1Amount": "قيمة خصم 1",
+    "discount2Rate": "نسبة خصم 2",
+    "discount2Amount": "قيمة خصم 2",
+    "discount3Rate": "نسبة خصم 3",
+    "discount3Amount": "قيمة خصم 3",
+    "minQuantityMin": "يجب أن تكون أقل كمية أكبر من 0",
+    "minQuantityMax": "يجب أن تكون أقل كمية أصغر من أقصى كمية",
+    "maxQuantityMin": "يجب أن تكون أقصى كمية أكبر من 0",
+    "maxQuantityMustBeGreaterThanMin": "يجب أن تكون أقصى كمية أكبر من أقل كمية",
+    "fixedUnitPriceMin": "يجب أن يكون سعر الوحدة الثابت أكبر من 0",
+    "required": "مطلوب",
+    "selectStock": "اختر المخزون",
+    "selectProduct": "اختر المنتج",
+    "stokCodePlaceholder": "أدخل رمز المخزون",
+    "stokCodeRequired": "رمز المخزون مطلوب",
+    "minQuantityRequired": "أقل كمية مطلوبة",
+    "maxQuantityRequired": "أقصى كمية مطلوبة",
+    "fixedUnitPriceRequired": "سعر الوحدة الثابت مطلوب",
+    "currencyCodeRequired": "العملة مطلوبة",
+    "selectCurrency": "اختر العملة",
+    "minQuantityInvalid": "أقل كمية غير صالحة",
+    "minQuantityInvalidMessage": "أدخل أقل كمية صحيحة"
+  },
+  "card": {
+    "customer": "العميل",
+    "lines": "البنود",
+    "salesmen": "المندوبون",
+    "vatIncluded": "ضريبة القيمة المضافة مشمولة"
+  },
+  "status": {
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "expired": "منتهي"
   }
 }
