--- a/src/locales/ar/product-select-dialog.json
+++ b/src/locales/ar/product-select-dialog.json
@@ -12,5 +12,10 @@
     "stock": "المخزون"
   },
   "noData": "لم يتم العثور على منتجات",
-  "loading": "جاري تحميل المنتجات..."
+  "loading": "جارٍ التحميل",
+  "description": "حدد منتجات ERP لإضافتها إلى طلبك",
+  "product": "منتج",
+  "noProducts": "لا توجد منتجات",
+  "noResults": "لا توجد نتائج",
+  "voiceSearch": "البحث الصوتي"
 }
