--- a/src/locales/ar/stock.json
+++ b/src/locales/ar/stock.json
@@ -27,5 +27,105 @@
     "out": "خروج",
     "transfer": "نقل",
     "adjustment": "تعديل"
+  },
+  "list": {
+    "title": "المنتجات",
+    "description": "إدارة المنتجات المتزامنة مع ERP",
+    "syncedFromErp": "متزامن من ERP",
+    "search": "بحث",
+    "id": "المعرّف",
+    "erpStockCode": "رمز المخزون في ERP",
+    "stockName": "اسم المنتج",
+    "unit": "الوحدة",
+    "actions": "الإجراءات",
+    "viewDetail": "عرض التفاصيل",
+    "showing": "عرض",
+    "page": "الصفحة",
+    "previous": "السابق",
+    "next": "التالي"
+  },
+  "detail": {
+    "title": "تفاصيل المنتج",
+    "basicInfo": "معلومات أساسية",
+    "basicInfoReadonly": "معلومات أساسية (للقراءة فقط)",
+    "images": "الصور",
+    "relations": "العلاقات",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "erpStockCode": "رمز المخزون في ERP",
+    "stockName": "اسم المنتج",
+    "unit": "الوحدة",
+    "htmlDescription": "وصف HTML",
+    "htmlDescriptionPlaceholder": "أدخل وصف HTML",
+    "htmlDescription.required": "وصف HTML مطلوب",
+    "technicalSpecs": "المواصفات الفنية",
+    "technicalSpecsPlaceholder": "أدخل المواصفات الفنية",
+    "notFound": "المنتج غير موجود",
+    "notFoundDesc": "المنتج المطلوب غير موجود",
+    "backToStockList": "العودة إلى القائمة",
+    "mainInfo": "المعلومات الرئيسية",
+    "ureticiKodu": "رمز الشركة المصنعة",
+    "groupInfo": "معلومات المجموعة",
+    "branchCode": "رمز الفرع",
+    "grup": "المجموعة",
+    "specialCodes": "رموز خاصة",
+    "kod1": "رمز 1",
+    "kod2": "رمز 2",
+    "kod3": "رمز 3",
+    "kod4": "رمز 4",
+    "kod5": "رمز 5",
+    "created": "تم الإنشاء",
+    "updated": "تم التحديث",
+    "copied": "تم النسخ",
+    "copy": "نسخ"
+  },
+  "images": {
+    "upload": "رفع",
+    "uploadHint": "اسحب الصور وأفلتها أو انقر للاختيار",
+    "uploadButton": "اختر ملفًا",
+    "selectedFiles": "الملفات المحددة",
+    "altText": "نص بديل",
+    "primary": "أساسي",
+    "setPrimary": "تعيين كأساسي",
+    "delete": "حذف",
+    "noImages": "لا توجد صور",
+    "deleteConfirm": "حذف الصورة",
+    "deleteConfirmMessage": "هل أنت متأكد من حذف هذه الصورة؟"
+  },
+  "relations": {
+    "add": "إضافة علاقة",
+    "relatedStock": "منتج مرتبط",
+    "relatedStock.required": "اختيار المنتج المرتبط مطلوب",
+    "quantity": "الكمية",
+    "quantity.positive": "يجب أن تكون الكمية رقمًا موجبًا",
+    "description": "الوصف",
+    "descriptionPlaceholder": "أدخل وصفًا",
+    "isMandatory": "إلزامي",
+    "mandatory": "إلزامي",
+    "optional": "اختياري",
+    "delete": "حذف",
+    "cancel": "إلغاء",
+    "deleting": "جارٍ الحذف...",
+    "actions": "الإجراءات",
+    "noRelations": "لا توجد علاقات",
+    "noRelationsDesc": "لا توجد منتجات مرتبطة",
+    "selectStock": "اختر المنتج",
+    "search": "بحث",
+    "deleteConfirm": "حذف العلاقة",
+    "deleteConfirmMessage": "هل أنت متأكد من حذف هذه العلاقة؟",
+    "confirmDelete": "تأكيد الحذف",
+    "stockCode": "رمز المخزون",
+    "stockName": "اسم المنتج",
+    "noStockFound": "لا توجد منتجات",
+    "saving": "جارٍ الحفظ..."
+  },
+  "messages": {
+    "detailCreateSuccess": "تم إنشاء التفاصيل بنجاح",
+    "detailUpdateSuccess": "تم تحديث التفاصيل بنجاح",
+    "deleteSuccess": "تم الحذف بنجاح",
+    "uploadSuccess": "تم رفع الصورة بنجاح",
+    "setPrimarySuccess": "تم تحديث الصورة الرئيسية",
+    "relationCreateSuccess": "تم إنشاء العلاقة بنجاح",
+    "error": "حدث خطأ"
   }
 }
