--- a/src/locales/ar/payment-type-management.json
+++ b/src/locales/ar/payment-type-management.json
@@ -25,5 +25,31 @@
     "updateSuccess": "تم تحديث نوع الدفع بنجاح",
     "deleteSuccess": "تم حذف نوع الدفع بنجاح",
     "confirmDelete": "هل أنت متأكد أنك تريد حذف نوع الدفع هذا؟"
-  }
+  },
+  "headerDescription": "إدارة وتعديل أنواع الدفع",
+  "editDescription": "قم بتعديل معلومات نوع الدفع",
+  "createDescription": "أدخل معلومات نوع الدفع الجديد",
+  "deleteTitle": "حذف نوع الدفع",
+  "name": "الاسم",
+  "namePlaceholder": "أدخل اسم نوع الدفع",
+  "descriptionPlaceholder": "أدخل وصفًا (اختياري)",
+  "createdDate": "تاريخ الإنشاء",
+  "updatedDate": "تاريخ التحديث",
+  "actions": "الإجراءات",
+  "search": "بحث",
+  "refresh": "تحديث",
+  "loading": "جارٍ التحميل...",
+  "previous": "السابق",
+  "next": "التالي",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "saving": "جارٍ الحفظ...",
+  "noData": "لا توجد بيانات",
+  "confirmDelete": "هل أنت متأكد من حذف نوع الدفع هذا؟",
+  "createSuccess": "تم إنشاء نوع الدفع بنجاح",
+  "updateSuccess": "تم تحديث نوع الدفع بنجاح",
+  "deleteSuccess": "تم حذف نوع الدفع بنجاح",
+  "createError": "حدث خطأ أثناء إنشاء نوع الدفع",
+  "updateError": "حدث خطأ أثناء تحديث نوع الدفع",
+  "deleteError": "حدث خطأ أثناء حذف نوع الدفع"
 }
