--- a/src/locales/ar/user-detail-management.json
+++ b/src/locales/ar/user-detail-management.json
@@ -22,5 +22,46 @@
   "messages": {
     "successUpdate": "تم تحديث تفاصيل المستخدم بنجاح",
     "errorUpdate": "فشل تحديث تفاصيل المستخدم"
-  }
+  },
+  "profilePicture": "صورة الملف الشخصي",
+  "height": "الطول (سم)",
+  "weight": "الوزن (كجم)",
+  "gender": "الجنس",
+  "enterHeight": "أدخل الطول (سم)",
+  "enterWeight": "أدخل الوزن (كجم)",
+  "enterDescription": "أدخل الوصف",
+  "selectGender": "اختر الجنس",
+  "noGenderSelected": "غير محدد",
+  "changeProfilePicture": "تغيير صورة الملف الشخصي",
+  "uploading": "جارٍ الرفع...",
+  "createSuccess": "تم إنشاء تفاصيل المستخدم بنجاح",
+  "updateSuccess": "تم تحديث تفاصيل المستخدم بنجاح",
+  "createError": "حدث خطأ أثناء إنشاء تفاصيل المستخدم",
+  "updateError": "حدث خطأ أثناء تحديث تفاصيل المستخدم",
+  "uploadProfilePictureSuccess": "تم رفع صورة الملف الشخصي بنجاح",
+  "uploadProfilePictureError": "حدث خطأ أثناء رفع صورة الملف الشخصي",
+  "fileSizeError": "حجم الملف لا يجب أن يتجاوز 5 ميغابايت",
+  "fileTypeError": "يُسمح فقط بملفات الصور",
+  "profilePictureUrlMaxLength": "طول رابط صورة الملف الشخصي يجب ألا يتجاوز 500 حرف",
+  "heightMin": "الطول يجب أن يكون 0 أو أكثر",
+  "heightMax": "الطول لا يجب أن يتجاوز 300 سم",
+  "weightMin": "الوزن يجب أن يكون 0 أو أكثر",
+  "weightMax": "الوزن لا يجب أن يتجاوز 500 كجم",
+  "descriptionMaxLength": "الوصف لا يجب أن يتجاوز 2000 حرف",
+  "genderNotSpecified": "غير محدد",
+  "genderMale": "ذكر",
+  "genderFemale": "أنثى",
+  "genderOther": "آخر",
+  "loading": "جارٍ التحميل...",
+  "loadingDescription": "جارٍ تحميل البيانات، يرجى الانتظار",
+  "cancel": "إلغاء",
+  "saving": "جارٍ الحفظ...",
+  "save": "حفظ",
+  "changePassword": "تغيير كلمة المرور",
+  "currentPassword": "كلمة المرور الحالية",
+  "enterCurrentPassword": "أدخل كلمة المرور الحالية",
+  "newPassword": "كلمة المرور الجديدة",
+  "enterNewPassword": "أدخل كلمة المرور الجديدة (حد أدنى 6 أحرف)",
+  "changingPassword": "جارٍ التغيير...",
+  "changePasswordButton": "تغيير كلمة المرور"
 }
