--- a/src/locales/ar/user-discount-limit-management.json
+++ b/src/locales/ar/user-discount-limit-management.json
@@ -31,5 +31,58 @@
     "required": "مطلوب",
     "successAdd": "تم إضافة حد الخصم بنجاح",
     "successUpdate": "تم تحديث حد الخصم بنجاح"
-  }
+  },
+  "create": "إنشاء",
+  "edit": "تعديل",
+  "editDescription": "حدّث حدود الخصم للبائع ومجموعة المنتجات.",
+  "createDescription": "حدّد حدود الخصم للبائع ومجموعة المنتجات.",
+  "delete": "حذف",
+  "salesperson": "مندوب المبيعات",
+  "erpProductGroupCode": "رمز مجموعة المنتج في ERP",
+  "maxDiscount1": "أقصى خصم 1",
+  "maxDiscount2": "أقصى خصم 2",
+  "maxDiscount3": "أقصى خصم 3",
+  "salespersonName": "اسم مندوب المبيعات",
+  "createdDate": "تاريخ الإنشاء",
+  "updatedDate": "تاريخ التحديث",
+  "actions": "الإجراءات",
+  "search": "بحث",
+  "filterBySalesperson": "تصفية حسب المندوب",
+  "filterByGroup": "تصفية حسب المجموعة",
+  "filterByDiscount": "تصفية حسب الخصم",
+  "noData": "لا توجد بيانات",
+  "confirmDelete": "هل أنت متأكد من حذف هذا السجل؟",
+  "createSuccess": "تم إنشاء حد الخصم بنجاح",
+  "updateSuccess": "تم تحديث حد الخصم بنجاح",
+  "createError": "تعذر إنشاء حد الخصم",
+  "updateError": "تعذر تحديث حد الخصم",
+  "deleteError": "تعذر حذف حد الخصم",
+  "alreadyExists": "يوجد حد خصم بالفعل لهذا المندوب والمجموعة",
+  "salespersonRequired": "مندوب المبيعات مطلوب",
+  "erpProductGroupCodeRequired": "رمز مجموعة المنتج في ERP مطلوب",
+  "erpProductGroupCodeMaxLength": "رمز مجموعة المنتج في ERP طويل جدًا",
+  "maxDiscount1Required": "أقصى خصم 1 مطلوب",
+  "maxDiscount1Range": "أقصى خصم 1 يجب أن يكون بين 0 و 100",
+  "maxDiscount2Range": "أقصى خصم 2 يجب أن يكون بين 0 و 100",
+  "maxDiscount3Range": "أقصى خصم 3 يجب أن يكون بين 0 و 100",
+  "selectSalesperson": "اختر مندوب المبيعات",
+  "enterErpProductGroupCode": "أدخل رمز مجموعة المنتج في ERP",
+  "enterMaxDiscount1": "أدخل أقصى خصم 1",
+  "enterMaxDiscount2": "أدخل أقصى خصم 2",
+  "enterMaxDiscount3": "أدخل أقصى خصم 3",
+  "loading": "جارٍ التحميل...",
+  "previous": "السابق",
+  "next": "التالي",
+  "saving": "جارٍ الحفظ...",
+  "save": "حفظ",
+  "cancel": "إلغاء",
+  "close": "إغلاق",
+  "clearFilters": "مسح عوامل التصفية",
+  "applyFilters": "تطبيق عوامل التصفية",
+  "minDiscount": "الخصم الأدنى",
+  "maxDiscount": "الخصم الأقصى",
+  "percentage": "النسبة المئوية",
+  "getBySalesperson": "جلب حسب المندوب",
+  "getByGroup": "جلب حسب المجموعة",
+  "getBySalespersonAndGroup": "جلب حسب المندوب والمجموعة"
 }
